# galsampler

./: .coveragerc  .gitignore  .readthedocs.yml  CHANGES.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: readthedocs.yml  tests.yml
docs/source/: conf.py  demo_crossmatch.ipynb  demo_galsampler.ipynb  index.rst  installation.rst  intro.rst  reference.rst  requirements.txt  rtd_environment.yaml
galsampler/: __init__.py  crossmatch.py  galmatch.py  host_halo_binning.py  source_galaxy_selection.py  source_halo_selection.py  utils.py
galsampler/cython_kernels/: __init__.py  galaxy_selection_kernel.pyx
galsampler/tests/: test_compute_richness.py  test_crossmatch.py  test_galmatch.py  test_halo_binning.py  test_source_galaxy_selection.py  test_source_halo_index_selection.py
